# rospkg_template

./: README.md
rospkg_template/: CMakeLists.txt  package.xml
rospkg_template/include/rospkg_template/: template.h
rospkg_template/launch/: template.launch
rospkg_template/script/: service_client.py
rospkg_template/src/: template.cpp
rospkg_template_msgs/: CMakeLists.txt  package.xml
